--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -1,5 +1,7 @@
 <%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
 
+<%= render 'layouts/notice' %>
+
 <div class="row">
   <% @travels.each do |t| %>
     <div class="col-sm-3 travel_index">
@@ -19,5 +21,3 @@
     </div>
   <% end %>
 </div>
-
-<%= render 'layouts/travels_footer' %>
