--- a/app/views/layouts/_users_sidebar.html.erb
+++ b/app/views/layouts/_users_sidebar.html.erb
@@ -1,14 +1,20 @@
-<div class="row" id="sidebar">
-  logo
+<%= stylesheet_link_tag 'sidebar', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+<nav class='col-2 flex-column bg-dark' id='sidebar'>
+  <%= image_tag('logo.png', class: 'logo_image') %>
+  <hr>
+  <%= link_to 'ユーザー詳細', user_path, class: 'nav-link' %>
+
   <% if controller_name == 'travels' && action_name == 'index' %>
-    <%= link_to 'トラベル新規作成', new_travel_path %>
+    <%= link_to 'トラベル新規作成', new_travel_path, class: 'nav-link' %>
   <% else %>
-    <%= link_to 'トラベル一覧', travels_path %>
+    <%= link_to 'トラベル一覧', travels_path, class: 'nav-link' %>
   <% end %>
-  <%= link_to '作成したメモ一覧', personal_notes_path %>
-  <%= link_to '作成したリスト一覧', personal_lists_path %>
-  <%= link_to 'ユーザー詳細', user_path %>
-  <%= link_to 'ユーザー編集', edit_user_registration_path %>
-  <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
-  <%= link_to '戻る', :back %>
-</div>
+
+  <%= link_to '作成したメモ一覧', personal_notes_path, class: 'nav-link' %>
+  <%= link_to '作成したリスト一覧', personal_lists_path, class: 'nav-link' %>
+  <%= link_to '戻る', :back, class: 'nav-link' %>
+  <hr>
+  <%= link_to 'ユーザー編集', edit_user_registration_path, class: 'nav-link' %>
+  <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+</nav>
