作業性向上のためビューを調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,9 +7,12 @@
     display: none;
   }
 
-  .container-fluid {
-    padding-top: 15px;
-    padding-bottom: 15px;
+  #fix_contents {
+    padding-top: 45px;
+  }
+
+  .contents {
+    padding: 30px;
   }
 }
 
