--- a/app/views/layouts/_users_footer.html.erb
+++ b/app/views/layouts/_users_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="navbar fixed-bottom bg-dark" id="footer">
+<footer class='navbar fixed-bottom bg-dark' id='footer'>
   <% if controller_name == 'travels' && action_name == 'index' %>
     <%= link_to 'トラベル新規作成', new_travel_path %>
   <% else %>
