--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,7 @@
-<div id="lists_area">
+<div id='lists_area'>
   <%= render partial: 'lists/index', locals: { lists: @lists } %>
 </div>
 
-<div id="list_area">
+<div id='list_area'>
 <%= render partial: 'lists/new', locals: { list: @list } %>
 </div>
