--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,7 +1,7 @@
-<div id="notes_area">
+<div id='notes_area'>
   <%= render partial: 'notes/index', locals: { notes: @notes } %>
 </div>
 
-<div id="note_area">
+<div id='note_area'>
 <%= render partial: 'notes/new', locals: { note: @note } %>
 </div>
