--- a/app/views/layouts/_notice.html.erb
+++ b/app/views/layouts/_notice.html.erb
@@ -1,6 +1,6 @@
 <% if notice.present? %>
-  <div class="notice"><%= notice %></div>
+  <div class='notice'><%= notice %></div>
 <% end %>
 <% if alert.present? %>
-  <div class="alert"><%= alert %></div>
+  <div class='alert'><%= alert %></div>
 <% end %>
