--- a/app/views/layouts/_travels_footer.html.erb
+++ b/app/views/layouts/_travels_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="navbar fixed-bottom bg-dark" id="footer">
+<footer class='navbar fixed-bottom bg-dark' id='footer'>
   <% if controller_name == 'travels' && action_name == 'show' %>
     <%= link_to 'トラベル一覧', travels_path %>
   <% else %>
