--- a/app/views/lists/_item_fields.html.erb
+++ b/app/views/lists/_item_fields.html.erb
@@ -1,5 +1,5 @@
-<div class="nested-fields">
-  <%= f.text_field :name, placeholder: "item" %>
-  <%= f.text_field :remark, placeholder: "remark" %>
+<div class='nested-fields'>
+  <%= f.text_field :name, placeholder: 'item' %>
+  <%= f.text_field :remark, placeholder: 'remark' %>
   <%= link_to_remove_association 'DELERT ITEM', f %>
 </div>
