--- a/app/views/notes/_new.html.erb
+++ b/app/views/notes/_new.html.erb
@@ -1,6 +1,6 @@
 <% if @note.errors.any? %>
-  <div id="note_error_area">
-    Creation failed due to <%= pluralize(@note.errors.count, "error") %>.<br>
+  <div id='note_error_area'>
+    Creation failed due to <%= pluralize(@note.errors.count, 'error') %>.<br>
     <% @note.errors.full_messages.each do |m| %>
       <li><%= m %></li>
     <% end %>
@@ -8,9 +8,9 @@
 <% end %>
 
 <%= form_with(model: @note) do |f| %>
-  <%= f.label :"content" %><%= f.text_area :content %><br>
-  <%= f.label :"image" %><%= f.file_field :image %><br>
-  <%= f.label :"remove image" %><%= f.check_box :remove_image %><br>
-  <%= f.label :"importance" %><%= f.check_box :importance, {}, true, false %><br>
+  <%= f.label :'content' %><%= f.text_area :content %><br>
+  <%= f.label :'image' %><%= f.file_field :image %><br>
+  <%= f.label :'remove image' %><%= f.check_box :remove_image %><br>
+  <%= f.label :'importance' %><%= f.check_box :importance, {}, true, false %><br>
   <%= f.submit 'CREATE' %>
 <% end %>
