topページを修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,10 +7,6 @@
     display: none;
   }
 
-  #fix_contents {
-    padding-top: 45px;
-  }
-
   .contents {
     padding: 30px;
   }
@@ -23,7 +19,7 @@
   }
 
   .container-fluid {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 15%;
+    padding-bottom: 15%;
   }
 }
