--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -1,54 +1,98 @@
-.container-fluid {
-  padding: 0;
-  background-color: #032123;
+html, body,
+.container-fluid,
+#carouselControls,
+.carousel-inner {
+  height: 100%;
 }
 
-.top_image {
-  max-width: 100%;
-  max-height: 100%;
-  margin: auto;
-  display: block;
+.container-fluid {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' %3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(44,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23ff7b2f'/%3E%3Cstop offset='1' stop-color='%237e15ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpattern id='b' width='11' height='11' patternUnits='userSpaceOnUse'%3E%3Ccircle fill='%23ffffff' cx='5.5' cy='5.5' r='5.5'/%3E%3C/pattern%3E%3Crect width='100%25' height='100%25' fill='url(%23a)'/%3E%3Crect width='100%25' height='100%25' fill='url(%23b)' fill-opacity='0.04'/%3E%3C/svg%3E");
+  /* background by SVGBackgrounds.com */
+  background-color: #ffffff;
+  background-attachment: fixed;
+  background-size: cover;
   @media only screen and (max-width: 576px){
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding: 0;
   }
 }
 
-.scroll_down {
-  color: white;
-  text-align: center;
+.carousel-item {
+  height: 100%;
+  @media only screen and (max-width: 576px){
+    padding-top: 15%;
+    padding-bottom: 15%;
+  }
+}
+
+.title_wrapper {
+  position: relative;
+  height: 100%;
+  background-color: #032123;
+  @media only screen and (min-width: 576px){
+    width: 30%;
+    margin: auto;
+  }
+  @media only screen and (max-width: 576px){
+    width: 100%;
+  }
+}
+
+.title_inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%,-50%);
+  -webkit-transform : translate(-50%,-50%);
+  transform : translate(-50%,-50%);
+  @media only screen and (min-width: 576px){
+    width: 100%;
+  }
+  @media only screen and (max-width: 576px){
+    width: 80%;
+  }
+}
+
+.logo, .image {
+  width: 100%;
+  display: block;
 }
 
 .log_in {
-  text-align: center;
-}
-
-#first_row {
-  @media only screen and (min-width: 576px){
-    padding-top: 3%;
-  }
-}
-
-#second_row {
-  @media only screen and (min-width: 576px){
-    padding-top: 8.33%;
-  }
-}
-
-#second_section {
-  @media only screen and (max-width: 576px){
-    padding: 5%;
-  }
-}
-
-.key_image {
-  max-width: 100%;
-  max-height: 100%;
-  margin: auto;
+  width: 100%;
   display: block;
-  border-radius: 0.25rem;
+  text-align: center;
+  color: white;
 }
 
-.message_box {
+
+
+.image_wrapper {
+  position: relative;
+  height: 100%;
+  display: inline-block;
+  @media only screen and (min-width: 576px){
+    width: 25%;
+    margin-left: 17.5%;
+  }
+}
+
+.sentence_wrapper {
+  position: relative;
+  height: 100%;
+  display: inline-block;
+  background-color: #032123;
   color: white;
+  @media only screen and (min-width: 576px){
+    width: 40%;
+    vertical-align: top;
+  }
+}
+
+
+
+@media only screen and (max-width: 576px){
+  .carousel-control-next-icon,
+  .carousel-control-prev-icon {
+    display: none;
+  }
 }
