--- a/app/assets/stylesheets/registrations_edit.css.scss
+++ b/app/assets/stylesheets/registrations_edit.css.scss
@@ -1,3 +1,10 @@
+@media only screen and (min-width: 576px){
+  html, body,
+  .container-fluid {
+    height: 100%;
+  }
+}
+
 .container-fluid {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' %3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(44,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23ff7b2f'/%3E%3Cstop offset='1' stop-color='%237e15ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpattern id='b' width='11' height='11' patternUnits='userSpaceOnUse'%3E%3Ccircle fill='%23ffffff' cx='5.5' cy='5.5' r='5.5'/%3E%3C/pattern%3E%3Crect width='100%25' height='100%25' fill='url(%23a)'/%3E%3Crect width='100%25' height='100%25' fill='url(%23b)' fill-opacity='0.04'/%3E%3C/svg%3E");
   /* background by SVGBackgrounds.com */
@@ -6,16 +13,9 @@
   background-size: cover;
 }
 
-.card_index {
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-.card-body {
-  text-align: center;
-  padding: 2%;
-}
-
-.card-title {
-  margin: 0;
+#error_explanation {
+  padding: 12px 20px;
+  margin-bottom: 15px;
+  list-style: none;
+  border-color: black !important;
 }
