--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,42 +1,53 @@
-<h2>Sign up</h2>
+<%= stylesheet_link_tag 'devise', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-<%= render 'layouts/notice' %>
+<div class='form_wrapper'>
+  <div class='form_inner'>
+    <h2>Sign up</h2>
+    <%= render 'layouts/notice' %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <% if resource.errors.any? %>
+        <div class='border rounded' id='error_explanation'>
+            <% resource.errors.full_messages.each do |m| %>
+              <li><%= m %></li>
+            <% end %>
+        </div>
+      <% end %>
 
-  <div class="form-group">
-    <%= f.text_field :name,
-                     placeholder: "name",
-                     class: 'form-control'
-    %>
-  </div>
-
-  <div class="form-group">
-    <%= f.email_field :email,
-                      autocomplete: "email",
-                      placeholder: "email",
-                      class: 'form-control'
-    %>
-  </div>
-
-  <div class="form-group">
-    <%= f.password_field :password,
-                         autocomplete: "new-password",
-                         placeholder: "password (#{@minimum_password_length} characters minimum)",
+      <div class='form-group'>
+        <%= f.text_field :name,
+                         placeholder: 'name',
                          class: 'form-control'
-    %>
-  </div>
+        %>
+      </div>
 
-  <div class="form-group">
-    <%= f.password_field :password_confirmation,
-    autocomplete: "new-password",
-    placeholder: "password confirmation",
-    class: 'form-control' %>
-  </div>
+      <div class='form-group'>
+        <%= f.email_field :email,
+                          autocomplete: 'email',
+                          placeholder: 'email',
+                          class: 'form-control'
+        %>
+      </div>
 
-  <div class="form-group">
-    <%= f.submit "Sign up", class: 'btn btn-primary' %>
-    <%= render "users/shared/links" %>
+      <div class='form-group'>
+        <%= f.password_field :password,
+                             autocomplete: 'new-password',
+                             placeholder: "password (#{@minimum_password_length} characters minimum)",
+                             class: 'form-control'
+        %>
+      </div>
+
+      <div class='form-group'>
+        <%= f.password_field :password_confirmation,
+        autocomplete: 'new-password',
+        placeholder: 'password confirmation',
+        class: 'form-control' %>
+      </div>
+
+      <div class='form-group'>
+        <%= f.submit 'Sign up', class: 'btn btn-primary' %>
+        <%= render 'users/shared/links' %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
