--- a/app/views/layouts/_travels_footer.html.erb
+++ b/app/views/layouts/_travels_footer.html.erb
@@ -1,9 +1,9 @@
-<footer class='navbar fixed-bottom bg-dark' id='footer'>
+<footer class='navbar fixed-bottom' id='footer'>
   <% if controller_name == 'travels' && action_name == 'show' %>
-    <%= link_to 'トラベル一覧', travels_path %>
+    <p class='mb-0'><small><%= link_to 'トラベル一覧', travels_path %></small></p>
   <% else %>
-    <%= link_to 'トラベル詳細', travel_path(@associated_travel) %>
+    <p class='mb-0'><small><%= link_to 'トラベル詳細', travel_path(@associated_travel) %></small></p>
   <% end %>
-  <%= link_to 'メモ一覧', notes_path %>
-  <%= link_to 'リスト一覧', lists_path %>
+    <p class='mb-0'><small><%= link_to 'メモ一覧', notes_path %></small></p>
+    <p class='mb-0'><small><%= link_to 'リスト一覧', lists_path %></small></p>
 </footer>
