--- a/app/views/layouts/_travels_sidebar.html.erb
+++ b/app/views/layouts/_travels_sidebar.html.erb
@@ -1,8 +1,8 @@
 <%= stylesheet_link_tag 'sidebar', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-<nav class='col-2 flex-column bg-dark' id='sidebar'>
+<nav class='col-2 flex-column' id='sidebar'>
   <%= image_tag('logo.png', class: 'logo_image') %>
-  <hr>
+  <hr class='dotted_white'>
   <%= link_to 'ユーザー詳細', user_path, class: 'nav-link' %>
 
   <% if controller_name == 'travels' && action_name == 'show' %>
@@ -14,7 +14,7 @@
   <%= link_to 'メモ一覧', notes_path, class: 'nav-link' %>
   <%= link_to 'リスト一覧', lists_path, class: 'nav-link' %>
   <%= link_to '戻る', :back, class: 'nav-link' %>
-  <hr>
+  <hr class='dotted_white'>
   <%= link_to 'ユーザー編集', edit_user_registration_path, class: 'nav-link' %>
   <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
 </nav>
