--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -1,7 +1,12 @@
 <%= stylesheet_link_tag 'travels', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class='col-sm-10 offset-sm-2 contents'>
+  <h2>Travel index</h2>
   <%= render 'layouts/notice' %>
+  <p class='mb-0'>latest travel : <%= @latest_travel.title %></p>
+
+  <hr class='mb-0'>
+
   <div class='row'>
     <% @travels.each do |t| %>
       <div class='col-sm-3 travel_index'>
@@ -23,4 +28,8 @@
       </div>
     <% end %>
   </div>
+
+  <hr class='mt-0'>
+
+  <%= paginate @travels %>
 </div>
