--- a/app/views/notes/personal.html.erb
+++ b/app/views/notes/personal.html.erb
@@ -1,3 +1,16 @@
-<% @notes.each do |n| %>
-  <%= link_to n.content,n %><%= n.created_at %><br>
-<% end %>
+<%= stylesheet_link_tag 'personal', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+<div class='col-sm-10 offset-sm-2 contents'>
+  <h2>All notes</h2>
+
+  <hr>
+
+  <% @notes.each do |n| %>
+    <li><%= link_to n.content,n %></li>
+    <p>( <%= I18n.l(n.created_at, format: :long) %> )</p>
+  <% end %>
+
+  <hr>
+
+  <%= paginate @notes %>
+</div>
