--- a/app/views/lists/personal.html.erb
+++ b/app/views/lists/personal.html.erb
@@ -1,4 +1,15 @@
-<% @lists.includes(:travel).each do |l| %>
-  <%= link_to l.title,l %> on <%= l.travel.title %><br>
-  Number of items: <%= l.items.count %><br>
-<% end %>
+<%= stylesheet_link_tag 'personal', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+<div class='col-sm-10 offset-sm-2 contents'>
+  <h2>All lists</h2>
+
+  <hr>
+
+  <% @lists.includes(:travel).each do |l| %>
+    <li class='mb-2'><%= link_to l.title,l %> has <%= l.items.count %> items, on <%= l.travel.title %></li>
+  <% end %>
+
+  <hr>
+
+  <%= paginate @lists %>
+</div>
