--- a/app/views/notes/_index.html.erb
+++ b/app/views/notes/_index.html.erb
@@ -1,3 +1,4 @@
 <% notes.each do |n| %>
-  <%= link_to n.content,n %><%= n.created_at %><br>
+  <li><%= link_to n.content, n %></li>
+  <p>( <%= I18n.l(n.created_at, format: :long) %> )</p>
 <% end %>
