--- a/app/views/lists/_index.html.erb
+++ b/app/views/lists/_index.html.erb
@@ -1,4 +1,5 @@
 <% lists.each do |l| %>
-  <%= link_to l.title,l %><br>
-  Number of items: <%= l.items.count %><br>
+  <li class='mb-2'>
+    <%= link_to l.title, l %> has <%= l.items.count %> items
+  </li>
 <% end %>
