--- a/app/views/lists/_item_fields.html.erb
+++ b/app/views/lists/_item_fields.html.erb
@@ -1,5 +1,17 @@
 <div class='nested-fields'>
-  <%= f.text_field :name, placeholder: 'item' %>
-  <%= f.text_field :remark, placeholder: 'remark' %>
-  <%= link_to_remove_association 'DELERT ITEM', f %>
+  <div class='form-group'>
+    <%= f.text_field :name,
+                     placeholder: 'item name',
+                     class: 'form-control'
+    %>
+  </div>
+
+  <div class='form-group'>
+    <%= f.text_area :remark,
+                     placeholder: 'remark',
+                     class: 'form-control'
+    %>
+  </div>
+
+  <%= link_to_remove_association 'DELERT ITEM', f, class: 'btn btn-primary btn-sm' %>
 </div>
