--- a/app/views/travels/_area_fields.html.erb
+++ b/app/views/travels/_area_fields.html.erb
@@ -1,7 +1,25 @@
 <div class='nested-fields'>
-  <%= f.text_field :country, placeholder: 'country' %>
-  <%= f.text_field :place, placeholder: 'place' %>
-  <%= f.date_select :arrived_at %>
-  <%= f.date_select :left_at %>
-  <%= link_to_remove_association 'DELERT AREA', f %>
+  <div class='form-group'>
+    <%= f.text_field :country,
+                     placeholder: 'country',
+                     class: 'form-control'
+    %>
+  </div>
+
+  <div class='form-group'>
+    <%= f.text_field :place,
+                     placeholder: 'place',
+                     class: 'form-control'
+    %>
+  </div>
+
+  <div class='mb-2'>
+    <%= f.label :'arrived at' %>
+    <%= f.date_select :arrived_at %>
+    ～
+    <%= f.label :'left at' %>
+    <%= f.date_select :left_at %>
+  </div>
+
+  <%= link_to_remove_association 'DELERT AREA', f, class: 'btn btn-secondary btn-sm' %>
 </div>
